--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+    <link rel="stylesheet" href=css/index.css> 
 <h1>Rainydays</h1>
 <p>My first paragraph.</p>
 
