--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head> 
+<link rel="stylesheet" href=css/index.css>  
+    </head>
 <body>
-    <link rel="stylesheet" href=css/index.css> 
-<h1>Rainydays</h1>
-<p>My first paragraph.</p>
 
 </body>
 </html>
