--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href=css/index.css>  
     </head>
 <body>
+    <h1>About</h1>
+    <h2>Contact</h2>
+    <h3>Home</h3>
 
 </body>
 </html>
