--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <link rel="stylesheet" href=css/index.css>  
     </head>
 <body>
+    <div>
+        
+    </div>
     <h1>About</h1>
     <h2>Contact</h2>
     <h3>Home</h3>
+    
 
 </body>
 </html>
