--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en" style="height: 100%;"> 
 
     <head> 
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Rainydays Rainjackets">
         <meta property="og:description" content="Online store rainjackets">
         <meta name="keywords" content="affordable rainyjacket for women and men">
@@ -13,9 +13,7 @@
 
 <link rel="stylesheet" href=css/index.css>  
     </head>
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-    <i class="fa fa-shopping-cart"></i>
-    <i class="fa fa-search"></i>
+    
 
 <body>
 
@@ -32,14 +30,20 @@
             </ul>
         </nav>
     </div>
-        <section>
-            <button type="submit class"button1>SHOP NOW</button> 
-        </section>
 
+     <section>
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <i class="fa fa-shopping-cart"></i>
+        <i class="fa fa-search"></i>
+     </section>
 
     </header>
+    <main>
+        <section>
+            <a class="cta" href="jackets.html">SHOP NOW</a> 
+        </section>
 
-<link rel="stylesheet" href=css/index.css> 
+    </main>
 
 <footer> Rainydays, Copyright &copy;2021</footer>
     
