--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
      <div class="container">
         <h1>Contact us</h1>
         <form>
-          <p>give us feedback</p>
+          <p> Give us feedback</p>
         </form>
         <button type="button" class="button_1" > Send</button>
          </div>
