--- a/product.html
+++ b/product.html
@@ -35,32 +35,32 @@
         <div class="box">
             <img src="./images/daniel-lincoln-X1_sFIFb1Zc-unsplash.jpg" width="200" height="300">
             <h1>Stella RainJacket 999.99,-</h1>
-            <a class="cta" href="checkout,html">Buy now</a> 
+            <a class="cta" href="checkout.html">Buy now</a> 
         </div>
             <div class="box">
                 <img src="./images/daniel-lincoln-X1_sFIFb1Zc-unsplash.jpg" width="200" height="300">
                 <h1>Stella RainJacket 999.99,-</h1>
-                <a class="cta" href="checkout,html">Buy now</a> 
+                <a class="cta" href="checkout.html">Buy now</a> 
             </div>
                 <div class="box">
                     <img src="./images/daniel-lincoln-X1_sFIFb1Zc-unsplash.jpg" width="200" height="300">
                     <h1>Stella RainJacket 999.99,-</h1>
-                    <a class="cta" href="checkout,html">Buy now</a> 
+                    <a class="cta" href="checkout.html">Buy now</a> 
                 </div>
                     <div class="box">
                         <img src="./images/daniel-lincoln-X1_sFIFb1Zc-unsplash.jpg" width="200" height="300">
                         <h1>Stella RainJacket 999.99,-</h1>
-                        <a class="cta" href="checkout,html">Buy now</a> 
+                        <a class="cta" href="checkout.html">Buy now</a> 
                     </div>
                         <div class="box">
                             <img src="./images/daniel-lincoln-X1_sFIFb1Zc-unsplash.jpg" width="200" height="300">
                             <h1>Stella RainJacket 999.99,-</h1>
-                            <a class="cta" href="checkout,html">Buy now</a> 
+                            <a class="cta" href="checkout.html">Buy now</a> 
                         </div>
                             <div class="box">
                                 <img src="./images/daniel-lincoln-X1_sFIFb1Zc-unsplash.jpg" width="200" height="300">
                                 <h1>Stella RainJacket 999.99,-</h1>
-                                <a class="cta" href="checkout,html">Buy now</a> 
+                                <a class="cta" href="checkout.html">Buy now</a> 
                             </div>
   </section>
 <section>
