--- a/checkout.html
+++ b/checkout.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rainydays checkout">
+    <meta property="og:description" content="Online store rainjackets">
+    <meta name="keywords" content="affordable rainyjacket for women and men rainjackets new inn">
     <title>Rainydays Jackets</title>
 
 <link rel="stylesheet" href=css/checkout.css>  
