--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Rainydays Rainjackets">
-        <meta property="og:description" content="Online store rainjackets">
-        <meta name="keywords" content="affordable rainyjacket for women and men">
+        <meta name="description" content="Rainydays contact">
+        <meta property="og:description" content="Online store rainjackets contact us">
+        <meta name="keywords" content="affordable rainyjacket for women and men contact us">
         <meta name="author" content="Vanja Marouf">
 
         <Title>Home Page Rainydays</Title>  
