--- a/jackets.html
+++ b/jackets.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Rainydays Rainjackets">
-        <meta property="og:description" content="Online store rainjackets">
-        <meta name="keywords" content="affordable rainyjacket for women and men">
+        <meta property="og:description" content="Rainjackets">
+        <meta name="keywords" content="affordable rainyjacket for women and men buy new inn sporty nature">
         <meta name="author" content="Vanja Marouf">
 
         <Title>Home Page Rainydays</Title>  
