--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="product.html">Products</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Account</a></li>
+        <li><a href="ny.html">NY</a></li>
     </ul>
 </nav>
 <h6><a href="checkout.html" class="fa fa-shopping-cart"></a></h6>
@@ -211,9 +212,9 @@
             <a href="" class="btn">Buy Now</a>
         </div>
 </div>
+</div>
     <div class="footer">
         <div class="container">
-            <div class="row">
                 <div class="footer-col-1">
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile</p>
@@ -226,7 +227,7 @@
             <hr>
             <p class="copyright">Copyright 2022 - Vanja Marouf</p>
         </div>
-    </div>
+    
         <script>var MenuItems = document.getElementById("MenuItems");
             
             MenuItems.style.maxHeight = "0px";
