--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>799,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/thom-holmes-fIZMcJsw-ms-unsplash.jpg" alt="">
@@ -88,7 +88,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>1599,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/thom-holmes-FeFgos-myPg-unsplash.jpg" alt="">
@@ -101,7 +101,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>899,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
     </div>
     <h2 class="title">New Products</h2>
@@ -117,7 +117,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>999,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/alvin-balemesa-65Rn4UvXyoM-unsplash.jpg" alt="">
@@ -130,7 +130,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>799,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/alvin-balemesa-xQ4GvoEp6hw-unsplash.jpg" alt="">
@@ -143,7 +143,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>1599,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/alvin-balemesa-65Rn4UvXyoM-unsplash.jpg" alt="">
@@ -156,7 +156,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>899,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/roman-shilin-KuWLUVTceSw-unsplash.jpg" alt="">
@@ -169,7 +169,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>2099,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/roman-shilin-12ybyCCwXYU-unsplash.jpg" alt="">
@@ -182,7 +182,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>399,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/roman-shilin-IDmp9MxIou4-unsplash.jpg" alt="">
@@ -195,7 +195,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>199,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
         <div class="col-c">
             <img src="images/roman-shilin-12ybyCCwXYU-unsplash.jpg" alt="">
@@ -208,7 +208,7 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>299,-</p>
-            <a href="" class="btn">Buy Now</a>
+            <a href="product.html" class="btn">Buy Now</a>
         </div>
 </div>
 </div>
