--- a/jackets.html
+++ b/jackets.html
@@ -56,12 +56,13 @@
             <h3><div class="details-price"></div></h3>
             <br>
             <p><div class="details-description"></div></p>
+        
     </div>
 </div>
 </div>
 </div>
 <div class="small-container">
-    <div class="row">
+    <div class="row-s">
         <div class="col-c">
             <img src="images/thom-holmes-naNYT9TgJ4c-unsplash.jpg" alt="">
             <h4>Yellow stella jacket</h4>
