--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 </div>
 </div>
 <section class="about-us">
-    <div class="row">
+    <div class="row-s">
         <div class="about-col">
             <h1>ABOUT US</h1>
         
