--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 <div class="account-page">
 <div class="container">
-    <div class="row">
+    <div class="row-s">
 <div class="col-2">
 <img src="images/glen-carrie-_oNISBwMTwo-unsplash.jpg" alt="">
 </div>
