--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  onclick="menutoggle()">
 
 </div>
-<div class="row">
+<div class="row-s">
 <div class="col-a">
     <h1>Always stylish, <br> even on rainy days!</h1>
     <p>Comfort, Quality & Fashionabel</p>
@@ -48,7 +48,7 @@
 </div>
 <div class="categories">
     <div class="small-container">
-    <div class="row">
+    <div class="row-s">
         <div class="col-b">
             <img src="images/pexels-yaroslav-shuraev-7165173.jpg" alt="">
         </div>
@@ -63,7 +63,7 @@
 </div>
 <div class="small-container">
     <h2 class="title">Most Wanted Items</h2>
-    <div class="row">
+    <div class="row-s">
         <div class="col-c">
             <img src="images/thom-holmes-mWBMgWAD63c-unsplash.jpg" alt="">
             <h4> Oslo rainy jacket</h4>
@@ -105,7 +105,7 @@
         </div>
     </div>
     <h2 class="title">New Products</h2>
-    <div class="row">
+    <div class="row-s">
         <div class="col-c">
             <img src="images/alvin-balemesa-xQ4GvoEp6hw-unsplash.jpg" alt="">
             <h4>Java jacket</h4>
